word-break in single post in list fixed

--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.scss
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.scss
@@ -17,5 +17,5 @@
 }
 
 .text-above {
-  word-break: break-all;
+  word-break: break-word;
 }
